Integrate all local DLC changes
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>